fix: always show version picker, even on mobile

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -62,3 +62,14 @@
 .anchor {
   scroll-margin-top: 50pt;
 }
+
+@media (max-width: 996px) {
+  .navbarSearchContainer_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module  {
+    position: relative !important;
+    right: 0 !important;
+  }
+
+  .navbar__items--right > .navbar__item:first-child {
+    display: block; /* so the version picker always shows up, even on small screens */
+  }
+}
